changed About tab

--- a/about.html
+++ b/about.html
@@ -7,34 +7,22 @@ image: /assets/images/bread2.jpeg
 
 <hr/>
 
-<h1>Artisan cray pickled whatever</h1>
-<h2>Artisan cray pickled whatever</h2>
-<h3>Artisan cray pickled whatever</h3>
-<h4>Artisan cray pickled whatever</h4>
-<h5>Artisan cray pickled whatever</h5>
-<h6>Artisan cray pickled whatever</h6>
+<p> Hello and welcome to Breadiquette! If you're new here, I'm Clara, and this is my blog! Breadiquette is the result of countless hours of scheming, both from myself and from a good friend Chris, a crazy smart computer scientiest to whom I probably still owe a few loaves of bread. </p>
+
+<p> I wanted to create Breadiquette for a few reasons. First, as I moved a way from friends and family for school, I wanted an outlet through which to keep my loved ones updated on my baking endeavors. Additionally, I've found baking to be a simultaneously stimulating and relaxing respite from my studies. Finally, I believe good food should be shared, even if only through a computer screen. I encourage you to bake along with me, and let me know how it goes! </p>
+
+<p> By way of thanks, I want to first shout out the aformentioned creator of this blog, Chris! I have immense gratitude for his invaluable support. I'd like to also thank my mom, for encouraging me to continue making sourdough even when I don't produce the results I want. I want to also mention my sister, Mary, for providing moral support, and for being my role model and best friend. This blog is a tribute to all my family and friends who have encouraged me in both my personal and my academic pursuits. Since I can't make them all bread, I can at least share with them virtually. </p>
 
 <hr/>
 
-<ol>
-  <li>Wes anderson cliche cosby sweater brooklyn vegan organic.</li>
-  <li>Synth ennui semiotics mustache pickled.</li>
-  <li>Food truck freegan vinyl thundercats, post-ironic ennui wes anderson banh mi four loko synth photo booth authentic 3 wolf moon.</li>
-</ol>
+<p> If you want to stay in touch, scroll down to the bottom of this page and enter your email in the box. Doing so will allow you to get notifications whenever I post, which, given my busy schedule, may be a little inconsistent at times. Or head over to the Contact button at the top of this page to send me a message directly! Hope to year from you soon. </p>
 
-<hr/>
-
-<ul>
-  <li>Wes anderson cliche cosby sweater brooklyn vegan organic.</li>
-  <li>Synth ennui semiotics mustache pickled.</li>
-  <li>Food truck freegan vinyl thundercats, post-ironic ennui wes anderson banh mi four loko synth photo booth authentic 3 wolf moon.</li>
-</ul>
 
 <hr/>
 
 <blockquote>
-  <p>“Bicycle rights mustache artisan, keytar lo-fi sustainable fap stumptown vegan salvia freegan four loko terry richardson.”</p>
-  <cite>Wolf Moon Cred</cite>
+  <p>“Deliberation, n.: The act of examining one's bread to determine which side it is buttered on.”</p>
+  <cite>Ambrose Bierce</cite>
 </blockquote>
 
 <hr/>
