Fixed a typo in about section

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ image: /assets/images/bread2.jpeg
 
 <hr/>
 
-<p> If you want to stay in touch, scroll down to the bottom of this page and enter your email in the box. Doing so will allow you to get notifications whenever I post, which, given my busy schedule, may be a little inconsistent at times. Or head over to the Contact button at the top of this page to send me a message directly! Hope to year from you soon. </p>
+<p> If you want to stay in touch, scroll down to the bottom of this page and enter your email in the box. Doing so will allow you to get notifications whenever I post, which, given my busy schedule, may be a little inconsistent at times. Or head over to the Contact button at the top of this page to send me a message directly! Hope to hear from you soon. </p>
 
 
 <hr/>
